test/link/script-align-17.out
error: Cannot align: The alignment (17) must be less than 16
    at script-align-17.link(2)
Linking failed with 1 error
